cmake_minimum_required(VERSION 3.10)
project(tree)
OPTION(BuildTests "Build with Tests" ON)
add_library(${PROJECT_NAME} STATIC include/tree/tree.h src/tree.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC include)
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
if(BuildTests)
	enable_testing()
    find_package(GTest REQUIRED)
	add_executable(${PROJECT_NAME}_tests tests/tree_tests.cpp)
	set_target_properties(${PROJECT_NAME}_tests PROPERTIES CXX_STANDARD 17)
    target_link_libraries(${PROJECT_NAME}_tests PRIVATE ${PROJECT_NAME} GTest::GTest GTest::Main)
	gtest_discover_tests(${PROJECT_NAME}_tests)
    add_test(AllTestsInMain ${PROJECT_NAME}_tests)
endif(BuildTests)